services/oembed/deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oembed
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: oembed
  ports:
    - name: http
      port: 80
      targetPort: http
